@@ -1,3 +1,8 @@
+2007-03-14  Christophe Rhodes  <csr21@cantab.net>
+
+	* slime.el (slime-search-suppressed-forms): handle multiple
+	conditionals on the same line.
+
 2007-02-26  Nikodemus Siivola <nikodemus@random-state.net>
 
 	* swank.lisp (inspect-for-emacs): Add support for inspecting
